﻿drkns 12.04.2015 22:26:53 +0200 - build 4345

1. Рефакторинг.

drkns 12.04.2015 21:02:09 +0200 - build 4344

1. По мотивам http://forum.farmanager.com/viewtopic.php?f=9&t=9034:
   - Экспериментально: добавлена поддержка юникода в SQLite, работа с базами теперь может вестись регистронезависимо.
   - Запоминание позиции в просмотре/редакторе производится регистронезависимо.
   - Для того, чтобы это работало адекватно, history.db надо удалить, или, если жалко, обновить по инструкции в вышеуказанном топике.
   - Если это актуально ещё где-то, кроме запоминания позиций в просмотре/редакторе - пишите.

zg 12.04.2015 19:46:28 +0200 - build 4343

1. уточнение 4332: смена кодировки в редакторе.

drkns 12.04.2015 15:18:07 +0200 - build 4342

1. С форума: падение при far /import

2. Рефакторинг.

drkns 11.04.2015 23:04:41 +0200 - build 4341

1. Рефакторинг.

2. Warnings.

zg 10.04.2015 13:29:09 +0200 - build 4340

1. уточнение 4337: сбрасывалось выделение при редактировании.

2. нажатие numlock, capslock, scrolllock снимало признак неизменённости в полях ввода.

3. gcc warnings.

zg 10.04.2015 01:25:50 +0200 - build 4339

1. при ненулевом FarDialogItem.MaxLength некорректно инициализировался элемент диалога.

svs 09.04.2015 06:54:08 +0300 - build 4338

1. SQLite 3.8.9

zg 09.04.2015 03:05:55 +0200 - build 4337

1. изолирована обработка нажатия CtrlAltShift.

drkns 05.04.2015 19:07:30 +0200 - build 4336

1. Рефакторинг. Немного переименований и перенос некоторых функций.

drkns 03.04.2015 20:55:27 +0200 - build 4335

1. 0002980: Неисправности в меню "Code pages".

zg 03.04.2015 14:10:08 +0200 - build 4334

1. уточнение 4330.

zg 03.04.2015 13:55:43 +0200 - build 4333

1. уточнение 4332.

zg 03.04.2015 02:57:53 +0200 - build 4332

1. 0002979: Редактирование любых файлов без потерь в режиме UTF-8.

drkns 02.04.2015 23:15:07 +0200 - build 4331

1. Рефакторинг.

2. Из меню дополнения в комстроке не вызывалось меню плагинов.

zg 02.04.2015 16:15:43 +0200 - build 4330
